<resources>
    <string name="app_name">SoundSwarm</string>
    <string name="action_settings">Settings</string>
    <string name="file_name">File Name</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="loop">Loop</string>
    <string name="begin">Begin</string>
    <string name="end">End</string>
    <string name="speed">Speed</string>
</resources>
