<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.jayhixson.soundswarm.SwarmSelector"
    tools:showIn="@layout/activity_swarm_selector">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="113dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="20dp"
                    android:text="@string/file_name" />

                <EditText
                    android:id="@+id/file_name_text"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:singleLine="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="20dp"
                    android:text="@string/title" />

                <EditText
                    android:id="@+id/title_text"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:singleLine="true" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="20dp"
                    android:text="@string/description" />

                <EditText
                    android:id="@+id/description_text"
                    android:layout_width="125dp"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:singleLine="false" />
            </LinearLayout>
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="20dp"
                    android:text="@string/loop" />

                <CheckBox
                    android:id="@+id/loop"
                    android:layout_width="match_parent"
                    android:layout_height="49dp"
                    android:layout_marginLeft="20dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="20dp"
                    android:text="@string/begin" />

                <EditText
                    android:id="@+id/begin_text"
                    android:layout_width="63dp"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:singleLine="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="20dp"
                    android:text="@string/end" />

                <EditText
                    android:id="@+id/end_text"
                    android:layout_width="63dp"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:singleLine="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="20dp"
                    android:text="@string/speed" />

                <EditText
                    android:id="@+id/speed_text"
                    android:layout_width="63dp"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:singleLine="true" />
            </LinearLayout>
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
