<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="20dp"
                android:text="@string/file_name" />

            <EditText
                android:id="@+id/file_name_text"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:inputType="text"
                android:singleLine="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="20dp"
                android:text="@string/title" />

            <EditText
                android:id="@+id/title_text"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:inputType="text"
                android:singleLine="true" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="20dp"
                android:text="@string/description" />

            <EditText
                android:id="@+id/description_text"
                android:layout_width="125dp"
                android:layout_height="match_parent"
                android:inputType="text"
                android:singleLine="false" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>